--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -194,6 +194,8 @@
         align-items: center;
         input[type="search"] {
           width: 300px;
+          border: none;
+          margin: 0;
           &::placeholder {
             font-size: 1.6rem;
             color: $textColor;
