--- a/scss/parts/_variable.scss
+++ b/scss/parts/_variable.scss
@@ -69,7 +69,7 @@ h4 {
   font-weight: 600;
   line-height: 3.2rem;
 }
-p {
+p, a {
   font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
@@ -127,7 +127,7 @@ textarea {
     font-weight: 600;
     line-height: 3.2rem;
   }
-  p {
+  p,a {
     font-size: 1.4rem;
     font-style: normal;
     font-weight: 400;
@@ -160,7 +160,7 @@ textarea {
     font-weight: 600;
     line-height: 3.2rem;
   }
-  p {
+  p,a {
     font-size: 1.4rem;
     font-style: normal;
     font-weight: 400;
@@ -193,7 +193,7 @@ textarea {
     font-weight: 600;
     line-height: 3.2rem;
   }
-  p {
+  p, a {
     font-size: 1.3rem;
     font-style: normal;
     font-weight: 400;
@@ -283,7 +283,7 @@ textarea {
     line-height: 2.2rem;
     color: $textColor;
   }
-  p {
+  p,a {
     font-size: 1.3rem;
     font-style: normal;
     font-weight: 400;
@@ -311,7 +311,7 @@ textarea {
     line-height: 2rem;
     color: $textColor;
   }
-  p {
+  p,a {
     font-size: 1.2rem;
     font-style: normal;
     font-weight: 400;
@@ -339,7 +339,7 @@ textarea {
     line-height: 2rem;
     color: $textColor;
   }
-  p {
+  p, a {
     font-size: 1.2rem;
     font-style: normal;
     font-weight: 400;
