--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -32,7 +32,350 @@
     }
     .footer-social {
       display: flex;
+      padding: 30px 0;
       justify-content: space-between;
+      .social-list{
+        display: flex;
+        column-gap: 8px;
+      }
     }
   }
+}
+
+@media screen and (max-width: 1499.98px) {
+    .footer {
+        .footer-inner {
+          display: block;
+          margin: 0 calc((100vw - 1150px) / 2);
+          .footer-content {
+            display: flex;
+            justify-content: space-between;
+            padding-bottom: 86px;
+            border-bottom: 2px solid $grey-500;
+            .footer-item {
+              flex-basis: 20%;
+              h4 {
+                color: $greenMain;
+              }
+              ul {
+                li {
+                  padding: 4px 0;
+                  align-items: center;
+                  img{
+                      padding-right: 12px;
+                  }
+                  a {
+                    align-items: center;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 24.5px;
+                  }
+                }
+              }
+            }
+          }
+          .footer-social {
+            display: flex;
+            padding: 30px 0;
+            justify-content: space-between;
+            .social-list{
+              display: flex;
+              column-gap: 8px;
+            }
+          }
+        }
+      }
+}
+
+@media screen and (max-width: 1399.98px) {
+    .footer {
+        .footer-inner {
+          display: block;
+          margin: 0 calc((100vw - 1150px) / 2);
+          .footer-content {
+            display: flex;
+            justify-content: space-between;
+            padding-bottom: 86px;
+            border-bottom: 2px solid $grey-500;
+            .footer-item {
+              flex-basis: 20%;
+              h4 {
+                color: $greenMain;
+              }
+              ul {
+                li {
+                  padding: 4px 0;
+                  align-items: center;
+                  img{
+                      padding-right: 12px;
+                  }
+                  a {
+                    align-items: center;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 24.5px;
+                  }
+                }
+              }
+            }
+          }
+          .footer-social {
+            display: flex;
+            padding: 30px 0;
+            justify-content: space-between;
+            .social-list{
+              display: flex;
+              column-gap: 8px;
+            }
+          }
+        }
+      }
+}
+
+@media screen and (max-width: 1199.98px) {
+    .footer {
+        .footer-inner {
+          display: block;
+          margin: 0 calc((100vw - 960px) / 2);
+          .footer-content {
+            display: flex;
+            justify-content: space-between;
+            padding-bottom: 86px;
+            border-bottom: 2px solid $grey-500;
+            .footer-item {
+              flex-basis: 24%;
+              h4 {
+                color: $greenMain;
+              }
+              ul {
+                li {
+                  padding: 4px 0;
+                  align-items: center;
+                  img{
+                      padding-right: 12px;
+                  }
+                  a {
+                    align-items: center;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 24.5px;
+                  }
+                }
+              }
+            }
+          }
+          .footer-social {
+            display: flex;
+            padding: 30px 0;
+            justify-content: space-between;
+            .social-list{
+              display: flex;
+              column-gap: 8px;
+            }
+          }
+        }
+      }
+}
+
+@media screen and (max-width: 991.98px) {
+    .footer {
+        .footer-inner {
+          display: block;
+          margin: 0 calc((100vw - 720px) / 2);
+          .footer-content {
+            display: flex;
+            justify-content: space-between;
+            padding-bottom: 86px;
+            border-bottom: 2px solid $grey-500;
+            .footer-item {
+              flex-basis: 24%;
+              h4 {
+                color: $greenMain;
+              }
+              ul {
+                li {
+                  padding: 4px 0;
+                  align-items: center;
+                  img{
+                      padding-right: 12px;
+                  }
+                  a {
+                    align-items: center;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 24.5px;
+                  }
+                }
+              }
+            }
+          }
+          .footer-social {
+            display: flex;
+            padding: 30px 0;
+            justify-content: space-between;
+            .social-list{
+              display: flex;
+              column-gap: 8px;
+            }
+          }
+        }
+      }
+}
+
+@media screen and (max-width: 767.98px) {
+    .footer {
+        .footer-inner {
+          display: block;
+          margin: 0 calc((100vw - 540px) / 2);
+          .footer-content {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 40px 20px;
+            justify-content: space-between;
+            padding-bottom: 86px;
+            border-bottom: 2px solid $grey-500;
+            .footer-item {
+              flex-basis: 48%;
+              h4 {
+                color: $greenMain;
+              }
+              ul {
+                li {
+                  padding: 4px 0;
+                  align-items: center;
+                  img{
+                      padding-right: 12px;
+                  }
+                  a {
+                    align-items: center;
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 14.5px;
+                  }
+                }
+              }
+            }
+          }
+          .footer-social {
+            display: flex;
+            padding: 30px 0;
+            justify-content: space-between;
+            .social-list{
+              display: flex;
+              column-gap: 8px;
+            }
+          }
+        }
+      }
+}
+
+@media screen and (max-width: 575.98px) {
+    .footer {
+        .footer-inner {
+          display: block;
+          margin: 0 calc((100vw - 430px) / 2);
+          .footer-content {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 40px 20px;
+            justify-content: space-between;
+            padding-bottom: 86px;
+            border-bottom: 2px solid $grey-500;
+            .footer-item {
+              flex-basis: 44%;
+              h4 {
+                color: $greenMain;
+              }
+              ul {
+                li {
+                  padding: 4px 0;
+                  align-items: center;
+                  img{
+                      padding-right: 12px;
+                  }
+                  a {
+                    align-items: center;
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 14.5px;
+                  }
+                }
+              }
+            }
+          }
+          .footer-social {
+            display: flex;
+            padding: 30px 0;
+            justify-content: space-between;
+            .footer-img{
+                img{
+                    width: 80%;
+                }
+            }
+            .social-list{
+              display: flex;
+              column-gap: 8px;
+            }
+          }
+        }
+      }
+}
+
+@media screen and (max-width: 460.98px) {
+    .footer {
+        .footer-inner {
+          display: block;
+          margin: 0 calc((100vw - 320px) / 2);
+          .footer-content {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 40px 20px;
+            justify-content: space-between;
+            padding-bottom: 86px;
+            border-bottom: 2px solid $grey-500;
+            .footer-item {
+              flex-basis: 44%;
+              h4 {
+                color: $greenMain;
+              }
+              ul {
+                li {
+                  padding: 4px 0;
+                  align-items: center;
+                  img{
+                      padding-right: 12px;
+                  }
+                  a {
+                    align-items: center;
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 14.5px;
+                  }
+                }
+              }
+            }
+          }
+          .footer-social {
+            display: flex;
+            padding: 30px 0;
+            justify-content: space-between;
+            .footer-img{
+                img{
+                    width: 80%;
+                }
+            }
+            .social-list{
+              display: flex;
+              column-gap: 8px;
+            }
+          }
+        }
+      }
 }
